Added Creator Credits

--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
             color: #fff;
             font-style: italic;
         }
+
+         }
+            #authour {
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+            font-size: 0.9em;
+            color: #fff;
+            font-style: italic;
+        }
     </style>
 </head>
 <body>
@@ -57,7 +67,10 @@
 </div>
 
 <!-- Version placeholder -->
-<div id="version">Version 25.0.1</div>
+<div id="version">Version 25.0.2</div>
+
+    <!-- Authour placeholder -->
+<div id="authour">Created by Henry Hughes. Quotes Collected By Asher Cao and Henry Hughes,</div>
 
 <script>
     const quotes = [
@@ -164,3 +177,4 @@
 
 </body>
 </html>
+
