Added New Quotes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 </div>
 
 <!-- Version placeholder -->
-<div id="version">Version 25.0.3</div>
+<div id="version">Version 25.0.4,
+Last Update Included New Quotes</div>
 
 <script>
     const quotes = [
@@ -155,6 +156,8 @@
         "Ah - Darwin",
         "Im treating my laptop severely - Darwin",
         "I should work on my food technology - Darwin",
+        "Heheheha" - Asher",
+        "SIIIIIX-SEVVVEEEN" David",
         "1 billion digits [of pi] - Darwin",      
     ];
 
@@ -166,5 +169,6 @@
 
 </body>
 </html>
+
 
 
