--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 </div>
 
 <!-- Version placeholder -->
-<div id="version">Version 25.0.4,
-Last Update Included New Quotes</div>
+<div id="version">Version 25.0.5</div>
 
 <script>
     const quotes = [
@@ -156,8 +155,6 @@ Last Update Included New Quotes</div>
         "Ah - Darwin",
         "Im treating my laptop severely - Darwin",
         "I should work on my food technology - Darwin",
-        "Heheheha" - Asher",
-        "SIIIIIX-SEVVVEEEN" David",
         "1 billion digits [of pi] - Darwin",      
     ];
 
@@ -169,6 +166,7 @@ Last Update Included New Quotes</div>
 
 </body>
 </html>
+
 
 
 
