--- a/index.html
+++ b/index.html
@@ -176,6 +176,10 @@
       "Ah - Darwin",
       "I’m treating my laptop severely - Darwin",
       "I should work on my food technology - Darwin",
+      "Gravity is actually confusing right now - Darwin",
+      "Why? I don't like to do the parkrun - Darwin",
+      "In four days that will be friday first - Darwin",
+      "Is it first day Friday? - Darwin",
       "1 billion digits [of pi] - Darwin"
     ];
 
@@ -187,4 +191,5 @@
   </script>
 </body>
 </html>
+
 
