--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     Report a Problem / Feedback
   </button>
 
-  <div class="version">Version 25.1.2</div>
+  <div class="version">Version 25.1.3</div>
 
   <script>
     const quotes = [
@@ -180,6 +180,8 @@
       "Why? I don't like to do the parkrun - Darwin",
       "In four days that will be friday first - Darwin",
       "Is it first day Friday? - Darwin",
+      "I’m the equivalent to Einstein, Actually, …. I’m not the equivalent of Einstein - Darwin",
+      "“...sorry - Darwin",
       "1 billion digits [of pi] - Darwin"
     ];
 
@@ -191,5 +193,6 @@
   </script>
 </body>
 </html>
+
 
 
