--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     Report a Problem / Feedback
   </button>
 
-  <div class="version">Version 25.1.3</div>
+  <div class="version">Version 25.1.4</div>
 
   <script>
     const quotes = [
@@ -181,7 +181,8 @@
       "In four days that will be friday first - Darwin",
       "Is it first day Friday? - Darwin",
       "I’m the equivalent to Einstein, Actually, …. I’m not the equivalent of Einstein - Darwin",
-      "“...sorry - Darwin",
+      "...sorry - Darwin",
+      "What?- Darwin",
       "1 billion digits [of pi] - Darwin"
     ];
 
@@ -193,6 +194,7 @@
   </script>
 </body>
 </html>
+
 
 
 
