--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     Report a Problem / Feedback
   </button>
 
-  <div class="version">Version 25.1.4</div>
+  <div class="version">Version 25.1.5</div>
 
   <script>
     const quotes = [
@@ -183,6 +183,15 @@
       "I’m the equivalent to Einstein, Actually, …. I’m not the equivalent of Einstein - Darwin",
       "...sorry - Darwin",
       "What?- Darwin",
+      “What’s your battery percentage - Darwin,”
+“What is Darwin approved? Is it rare? - Darwin,”
+“Brother!! - Darwin,”
+“What? What? What? What? What? I don’t have it - Darwin,”
+“Stop ragebaiting - Darwin,”
+“Mi mi mi mi mi mi - Darwin,”
+“I don't know… who’s Darwin? Who’s me again? - Darwin,”
+“Lowkey is tuff - Darwin,”
+”I panic - Darwin,”
       "1 billion digits [of pi] - Darwin"
     ];
 
@@ -194,6 +203,7 @@
   </script>
 </body>
 </html>
+
 
 
 
