--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     Report a Problem / Feedback
   </button>
 
-  <div class="version">Version 25.1.5</div>
+  <div class="version">Version 25.1.6</div>
 
   <script>
     const quotes = [
@@ -158,7 +158,6 @@
       "Here write twenty five - Darwin",
       "No - Darwin",
       "In order to be bold, you must first be bold - Darwin",
-      "What - Darwin",
       "I’m not gonna tell you, if it’s crucial for me to tell you, it’s not crucial - Darwin",
       "That’s my equivalent to god - Darwin",
       "... - Darwin",
@@ -182,16 +181,16 @@
       "Is it first day Friday? - Darwin",
       "I’m the equivalent to Einstein, Actually, …. I’m not the equivalent of Einstein - Darwin",
       "...sorry - Darwin",
-      "What?- Darwin",
-      “What’s your battery percentage - Darwin,”
-“What is Darwin approved? Is it rare? - Darwin,”
-“Brother!! - Darwin,”
-“What? What? What? What? What? I don’t have it - Darwin,”
-“Stop ragebaiting - Darwin,”
-“Mi mi mi mi mi mi - Darwin,”
-“I don't know… who’s Darwin? Who’s me again? - Darwin,”
-“Lowkey is tuff - Darwin,”
-”I panic - Darwin,”
+      "What? - Darwin",
+      "What’s your battery percentage - Darwin",
+      "What is Darwin approved? Is it rare? - Darwin",
+      "Brother!! - Darwin",
+      "What? What? What? What? What? I don’t have it - Darwin",
+      "Stop ragebaiting - Darwin",
+      "Mi mi mi mi mi mi - Darwin",
+      "I don't know… who’s Darwin? Who’s me again? - Darwin",
+      "Lowkey is tuff - Darwin",
+      "I panic - Darwin",
       "1 billion digits [of pi] - Darwin"
     ];
 
@@ -203,8 +202,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
