--- a/beta-version.html
+++ b/beta-version.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Darwin Quote Generator</title>
+  <title>BETA VERSION Darwin Quote Generator BETA VERSION</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -104,7 +104,7 @@
   </div>
 
   <a class="feedback" href="mailto:henry.hughes598@gmail.com?subject=Darwin Quote Feedback">Feedback</a>
-  <div class="version">Version 1.0</div>
+  <div class="version">Version 26.0.0 Beta Version</div>
 
   <script>
     const quotes = [
