--- a/beta-version.html
+++ b/beta-version.html
@@ -104,7 +104,7 @@
   </div>
 
   <a class="feedback" href="mailto:henry.hughes598@gmail.com?subject=Darwin Quote Feedback">Feedback</a>
-  <div class="version">Version 26.0.0 Beta Version</div>
+  <div class="version">Version 26.0.0 (Beta Version)</div>
 
   <script>
     const quotes = [
