Fixed Name of Site

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Darwin Quotes Beta Version</title>
+  <title>Darwin Quote Generator</title>
   <style>
     body {
       background-color: #3FC4CA;
@@ -82,7 +82,7 @@
     Report a Problem / Feedback
   </button>
 
-  <div class="version">Version 25.2.0</div>
+  <div class="version">Version 25.2.1</div>
 
   <script>
     const quotes = [
@@ -215,3 +215,4 @@
   </script>
 </body>
 </html>
+
