--- a/launch-updates.html
+++ b/launch-updates.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DarwinOS 26 Release Notes</title>
+<title>DarwinOS 26 Release Notes and News</title>
 <style>
   body {
     font-family: 'Arial', sans-serif;
