--- a/release-notes.html
+++ b/release-notes.html
@@ -13,9 +13,11 @@
     color: #1c1b1a;
     display: flex;
     justify-content: center;
+    align-items: flex-start; /* keep horizontal center but allow vertical gap */
     min-height: 100vh;
     text-align: center;
-    flex-direction: column;
+    padding-top: 60px; /* top gap */
+    box-sizing: border-box;
   }
 
   .card {
@@ -26,8 +28,6 @@
     width: 90%;
     box-shadow: 0 15px 30px rgba(0,0,0,0.2);
     animation: fadeIn 1s ease-in;
-    margin-top: 60px; /* Gap at the top */
-    margin-bottom: 60px;
   }
 
   @keyframes fadeIn {
@@ -108,7 +108,7 @@
     <a class="button" href="https://henry-598.github.io/darwin-quotes" target="_blank">See the Darwin Quote Generator</a>
   </div>
 
-  <div class="version">Version 26.0</div>
+  <div class="version">Version 26.0.1</div>
 
   <script>
     const countdownEl = document.getElementById('countdown');
