Update title and header for terms and conditions

--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Terms and Conditions - DarwinOS 26</title>
+  <title>Terms and Conditions</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -91,12 +91,12 @@
 </head>
 <body>
 
-<header>DarwinOS 26 - Terms & Conditions</header>
+<header>Darwin Quote Generator Terms & Conditions</header>
 
 <main>
   <p><strong>Effective Date:</strong> 12 November 2025</p>
 
-  <p>Welcome to DarwinOS 26’s website! By accessing or using this website, including all pages, features, and services (collectively, the “Site”), you agree to comply with these Terms and Conditions. If you do not agree, please exit the Site immediately.</p>
+  <p>Welcome to the Darwin Quote Generator! By accessing or using this website, including all pages, features, and services (collectively, the “Site”), you agree to comply with these Terms and Conditions. If you do not agree, please exit the Site immediately.</p>
 
   <h2>1. Acceptance of Terms</h2>
   <p>By using this Site, you acknowledge that you have read, understood, and agree to be bound by these Terms and Conditions. We may update these terms at any time, and continued use of the Site confirms your acceptance of any updates.</p>
