--- a/beta-version.html
+++ b/beta-version.html
@@ -101,7 +101,7 @@
   <div class="card">
     <h1>No Live Beta Version</h1>
     <p>The Darwin Quote Generator beta isn’t live yet.<br>
-    The next live beta will be <strong>Version 26.1.0 Beta</strong>, which will be available <strong>29 November 2025</strong>.<br>
+    The next live beta will be <strong>Version 26.1.0 Beta</strong>, which will be available to the general public on the <strong>29 November 2025</strong>.<br>
     If you want early access to the next beta, please email me:</p>
     <a class="button" href="mailto:henry.hughes598@gmail.com?subject=Early Access Request">Request Early Access</a>
     <br>
