--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -3,166 +3,159 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Terms and Conditions</title>
+  <title>Terms and Conditions - DarwinOS Site</title>
   <style>
     body {
-      font-family: 'Arial', sans-serif;
-      background-color: #3FC4CA; /* DarwinOS aqua */
+      font-family: Arial, sans-serif;
+      background-color: #f0f8ff;
       margin: 0;
       padding: 0;
       color: #1c1b1a;
     }
-
     header {
-      background: linear-gradient(135deg, #3FC4CA, #1A9CB3);
-      padding: 50px 20px;
+      background-color: #3FC4CA;
+      padding: 40px 20px;
       text-align: center;
-      font-size: 2.2rem;
+      font-size: 2rem;
       font-weight: bold;
       color: white;
-      border-bottom-left-radius: 20px;
-      border-bottom-right-radius: 20px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
-
     main {
       max-width: 900px;
       margin: 40px auto;
-      padding: 30px 25px 50px 25px;
+      padding: 0 20px 40px 20px;
       background-color: #ffffff;
-      border-radius: 15px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.15);
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     }
-
     h2 {
       color: #3FC4CA;
       margin-top: 30px;
     }
-
     p, li {
       line-height: 1.6;
       margin-bottom: 12px;
     }
-
     ul {
       margin-bottom: 12px;
       padding-left: 20px;
     }
-
-    .darwin-quotes {
-      background-color: #f0f9f9;
-      border-left: 5px solid #3FC4CA;
-      padding: 15px;
-      margin: 20px 0;
-      border-radius: 10px;
-    }
-
     footer {
       text-align: left;
-      padding: 15px 25px;
+      padding: 15px 20px;
       font-size: 0.9rem;
       color: #555;
       background-color: #e0f7fa;
       border-top: 1px solid #3FC4CA;
-      border-bottom-left-radius: 20px;
-      border-bottom-right-radius: 20px;
     }
-
     a {
-      color: #1A9CB3;
+      color: #3FC4CA;
       text-decoration: none;
-      font-weight: bold;
     }
-
     a:hover {
       text-decoration: underline;
-    }
-
-    @media (max-width: 600px) {
-      header {
-        font-size: 1.8rem;
-        padding: 40px 15px;
-      }
-      main {
-        padding: 20px 15px 40px 15px;
-      }
     }
   </style>
 </head>
 <body>
 
-<header>Darwin Quote Generator Terms & Conditions</header>
+<header>Website Terms and Conditions</header>
 
 <main>
   <p><strong>Effective Date:</strong> 12 November 2025</p>
 
-  <p>Welcome to the Darwin Quote Generator! By accessing or using this website, including all pages, features, and services (collectively, the “Site”), you agree to comply with these Terms and Conditions. If you do not agree, please exit the Site immediately.</p>
+  <p>Welcome to our website. By accessing or using this website, including all pages, features, and services (collectively, the “Site”), you agree to comply with and be bound by the following Terms and Conditions. If you do not agree to these terms, you must not use the Site.</p>
 
   <h2>1. Acceptance of Terms</h2>
-  <p>By using this Site, you acknowledge that you have read, understood, and agree to be bound by these Terms and Conditions. We may update these terms at any time, and continued use of the Site confirms your acceptance of any updates.</p>
+  <p>By using this Site, you acknowledge that you have read, understood, and agree to be bound by these Terms and Conditions, as well as any additional guidelines, rules, or disclaimers posted on the Site. We reserve the right to update or modify these Terms and Conditions at any time without prior notice. Your continued use of the Site after any changes constitutes your acceptance of the updated terms.</p>
 
-  <h2>2. Using the Site</h2>
-  <p>You agree to use the Site for lawful purposes only. Prohibited behavior includes:</p>
+  <h2>2. Use of the Site</h2>
+  <p>You agree to use the Site only for lawful purposes and in a manner that does not infringe the rights of, restrict, or inhibit the use and enjoyment of the Site by others. Prohibited behavior includes, but is not limited to:</p>
   <ul>
-    <li>Unlawful or fraudulent activity</li>
-    <li>Disrupting the Site’s functionality or security</li>
-    <li>Attempting unauthorized access to data or accounts</li>
-    <li>Uploading harmful or infringing content</li>
+    <li>Engaging in unlawful or fraudulent activities</li>
+    <li>Interfering with the security or operation of the Site</li>
+    <li>Attempting to gain unauthorized access to data, accounts, or networks</li>
+    <li>Uploading, posting, or transmitting content that is harmful, offensive, or infringing on intellectual property rights</li>
   </ul>
+  <p>You must not use the Site in a way that disrupts the experience of other users or imposes an unreasonable burden on Site infrastructure.</p>
 
   <h2>3. Account Responsibility</h2>
-  <p>If you create an account, you are responsible for maintaining its security and all activity on your account. Notify us immediately of unauthorized access.</p>
+  <p>Certain features of the Site may require you to create an account or provide personal information. You are solely responsible for maintaining the confidentiality of your account credentials and for all activity that occurs under your account. You agree to notify us immediately of any unauthorized use of your account. We are not liable for any loss or damage arising from your failure to comply with this obligation.</p>
 
-  <h2>4. Intellectual Property</h2>
-  <p>All Site content—including text, images, audio, and design—is protected by copyright and other intellectual property laws. You may access it for personal, non-commercial use only. Unauthorized use may lead to legal action.</p>
+  <h2>4. Intellectual Property Rights</h2>
+  <p>All content on the Site, including but not limited to text, graphics, logos, images, audio, video, software, and site design, is the property of the Site owner or its licensors and is protected by copyright, trademark, and other intellectual property laws. You are granted a limited, non-exclusive, non-transferable license to access and use the Site for personal, non-commercial purposes. Any unauthorized use of Site content may violate copyright, trademark, and other laws and may result in legal consequences.</p>
 
   <h2>5. User-Generated Content</h2>
-  <p>Content you submit grants us a worldwide, royalty-free license to use, reproduce, and display it on the Site. You confirm you own rights to your content and that it does not violate others’ rights.</p>
+  <p>If you post, submit, or otherwise make available content on the Site, you grant us a non-exclusive, worldwide, royalty-free, transferable license to use, reproduce, modify, publish, and distribute such content in connection with the Site and its operations. You represent and warrant that you have all necessary rights to grant this license and that your content does not violate any third-party rights. You agree to indemnify and hold us harmless from any claims, damages, or expenses arising from your content.</p>
 
-  <div class="darwin-quotes">
-    <h2>5a. Darwin Quotes</h2>
-    <p>All quotes from "Darwin" on this Site are for entertainment, educational, and personal use. You may view or share them non-commercially, but cannot redistribute or modify commercially without permission. Quotes may be unusual, humorous, or out of context—treat them as lighthearted content!</p>
-  </div>
+  <h2>5a. Use of Darwin Quotes</h2>
+  <p>All quotes attributed to “Darwin” on this Site, including text, audio, or visual representations, are provided for entertainment, educational, and personal use. Users may view, share, or reference these quotes in non-commercial contexts. Commercial use, redistribution, or modification without written permission is prohibited.</p>
+  <p>The Site owner does not guarantee the accuracy, intent, or context of any quote and is not liable for interpretation, reliance, or outcomes resulting from the use of Darwin Quotes. Users acknowledge that the quotes may be humorous, unusual, or out of context, and should be treated as lighthearted content.</p>
 
   <h2>6. Prohibited Activities</h2>
   <ul>
-    <li>Harassment or harm of other users</li>
-    <li>False or misleading content</li>
-    <li>Automated scripts or bots</li>
-    <li>Collecting others’ personal info without consent</li>
+    <li>Use the Site to harass, abuse, or harm another person</li>
+    <li>Post content that is false, misleading, or defamatory</li>
+    <li>Attempt to disrupt the Site’s functionality or security</li>
+    <li>Use automated scripts, bots, or other methods to access the Site in excess of normal browsing</li>
+    <li>Collect or harvest personal information about other users without their consent</li>
   </ul>
 
   <h2>7. Privacy</h2>
-  <p>Your use of the Site is governed by our <a href="privacy.html">Privacy Policy</a>.</p>
+  <p>Your use of the Site is governed by our Privacy Policy, which explains how we collect, use, and protect personal information. By using the Site, you consent to the collection and use of information in accordance with our Privacy Policy.</p>
 
-  <h2>8. Third-Party Links</h2>
-  <p>We are not responsible for third-party websites linked here. Access them at your own risk.</p>
+  <h2>8. Third-Party Links and Services</h2>
+  <p>The Site may contain links to third-party websites or services. We do not control, endorse, or assume responsibility for the content, privacy practices, or reliability of any third-party sites. Accessing these links is at your own risk, and we are not liable for any loss or damage arising from your use of such third-party sites.</p>
 
   <h2>9. Disclaimers</h2>
-  <p>The Site is provided “as is.” We do not guarantee accuracy or reliability of content.</p>
+  <p>The Site and its content are provided “as is” and “as available” without warranties of any kind, whether express or implied. We do not guarantee the accuracy, completeness, or reliability of any Site content. To the fullest extent permitted by law, we disclaim all warranties, including implied warranties of merchantability, fitness for a particular purpose, and non-infringement.</p>
 
   <h2>10. Limitation of Liability</h2>
-  <p>We are not liable for indirect, incidental, or consequential damages from use of the Site.</p>
+  <p>In no event shall we, our affiliates, or our partners be liable for any indirect, incidental, special, consequential, or punitive damages arising from your use of or inability to use the Site, including but not limited to loss of profits, data, or business opportunities. Our total liability for claims arising from your use of the Site shall not exceed the amount, if any, you paid to us for access to the Site.</p>
 
   <h2>11. Indemnification</h2>
-  <p>You agree to hold us harmless from claims or damages arising from your use of the Site or content you submit.</p>
+  <p>You agree to defend, indemnify, and hold harmless the Site, its owners, affiliates, and employees from and against any claims, liabilities, damages, losses, or expenses, including reasonable attorneys’ fees, arising out of or related to:</p>
+  <ul>
+    <li>Your use of the Site</li>
+    <li>Your violation of these Terms and Conditions</li>
+    <li>Your violation of applicable law or third-party rights</li>
+    <li>Any content you submit, post, or transmit through the Site</li>
+  </ul>
 
   <h2>12. Termination</h2>
-  <p>We may suspend or terminate access for violations of these Terms. Intellectual property, disclaimers, and liability sections survive termination.</p>
+  <p>We reserve the right to suspend, restrict, or terminate your access to the Site at any time for any reason, including violations of these Terms and Conditions. Upon termination, you must immediately cease all use of the Site. Sections regarding intellectual property, disclaimers, limitation of liability, and indemnification shall survive termination.</p>
 
   <h2>13. Governing Law</h2>
-  <p>These Terms are governed by South Australian law. Any disputes are subject to the courts in Adelaide, South Australia.</p>
+  <p>These Terms and Conditions shall be governed by and construed in accordance with the laws of <strong>South Australia, Australia</strong>. Any disputes arising under or in connection with these Terms and Conditions shall be subject to the exclusive jurisdiction of the courts located in <strong>Adelaide, South Australia</strong>.</p>
 
-  <h2>14. Feedback</h2>
-  <p>Send feedback, questions, or ideas to <a href="mailto:henry.hughes598@gmail.com">henry.hughes598@gmail.com</a>.</p>
+  <h2>14. Changes to Terms and Conditions</h2>
+  <p>We may modify these Terms and Conditions at any time without prior notice. Any updates will be posted on this page with the “Effective Date” revised accordingly. Continued use of the Site after changes constitutes acceptance of the updated terms.</p>
 
-  <h2>15. Acknowledgement</h2>
-  <p>By using this Site, you acknowledge that you have read, understood, and accepted these Terms and Conditions.</p>
+  <h2>15. Disclaimer for User Conduct</h2>
+  <p>You are solely responsible for any and all content you submit, upload, or share on the Site. We do not control user-generated content and are not responsible for the accuracy, legality, or appropriateness of such content. You acknowledge that any reliance on user-generated content is at your own risk.</p>
+
+  <h2>16. Feedback and Contact</h2>
+  <p>If you provide feedback, suggestions, or ideas about the Site, you grant us the right to use such feedback freely without restriction or obligation to you. For questions about these Terms and Conditions or other inquiries, please contact us at <a href="mailto:henry.hughes598@gmail.com">henry.hughes598@gmail.com</a>.</p>
+
+  <h2>17. Entire Agreement</h2>
+  <p>These Terms and Conditions, together with any applicable Privacy Policy, constitute the entire agreement between you and us regarding your use of the Site and supersede all prior agreements, understandings, or communications, whether written or oral.</p>
+
+  <h2>18. Severability</h2>
+  <p>If any provision of these Terms and Conditions is found to be unenforceable or invalid under applicable law, such provision shall be limited or eliminated to the minimum extent necessary, and the remaining provisions shall remain in full force and effect.</p>
+
+  <h2>19. Waiver</h2>
+  <p>Failure or delay by us to enforce any provision of these Terms and Conditions shall not constitute a waiver of our right to enforce that provision or any other provision in the future.</p>
+
+  <h2>20. International Users</h2>
+  <p>The Site is intended primarily for users in Australia, and we make no representation that the Site is appropriate or available for use in other locations. Accessing the Site from territories where its content is illegal is prohibited, and you are responsible for compliance with local laws.</p>
+
+  <h2>21. Acknowledgement</h2>
+  <p>By using this Site, you acknowledge that you have read, understood, and agree to these Terms and Conditions and that they constitute a legally binding agreement between you and the Site owner.</p>
 
 </main>
 
 <footer>
-  &copy; 2025 Henry Hughes & Asher Cao. All rights reserved.
+  &copy; 2025 DarwinOS Site. All rights reserved.
 </footer>
 
 </body>
