Update copyright notice in footer

--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -155,7 +155,7 @@
 </main>
 
 <footer>
-  &copy; 2025 DarwinOS Site. All rights reserved.
+  &copy; 2025 Henry Hughes and Asher Cao. All rights reserved.
 </footer>
 
 </body>
